[tool.poetry]
name = "utility"
version = "0.1.0"
description = ""
authors = ["Javkhaa <javkhaa@live.com>"]
readme = "README.md"

[tool.poetry.scripts]
yolo_track = "bin.object_tracking:process_video"
yolo_track_stream = "bin.object_tracking_streaming:process_video"
yolo_inference = "bin.image_inference:create_cvat_importable_annotations"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
ultralytics = "^8.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
