[tool.poetry]
name = "utility"
version = "0.1.0"
description = ""
authors = ["Javkhaa <javkhaa@live.com>"]
readme = "README.md"

[tool.poetry.scripts]
yolo_track = "src.object_tracking:process_video"
yolo_track_stream = "src.object_tracking_streaming:process_video"
yolo_inference = "src.image_inference:create_cvat_importable_annotations"
sample_video = "src.video_sampling:sample_video_for_images"
prepare_dataset = "src.prepare_dataset:prepare_training_dataset"
train_yolo = "src.train_yolo:train_custom_model"

[tool.poetry.dependencies]
click = "^8.1.7"
loguru = "^0.7.3"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pandas = "^2.2.0"
pillow = "^10.2.0"
python = "^3.11"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.5.2"
ultralytics = "^8.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
