[tool.poetry]
name = "utility"
version = "0.1.0"
description = ""
authors = ["Javkhaa <javkhaa@live.com>"]
readme = "README.md"

[tool.poetry.scripts]
yolo_track = "bin.object_tracking:process_video"
yolo_track_stream = "bin.object_tracking_streaming:process_video"
yolo_inference = "bin.image_inference:create_cvat_importable_annotations"
sample_video = "bin.video_sampling:sample_video_for_images"
prepare_dataset = "bin.prepare_dataset:prepare_training_dataset"
train_yolo = "bin.train_yolo:train_custom_model"
yolo_object_extraction = "bin.object_extraction:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
ultralytics = "^8.1.18"
click = "^8.1.7"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
